adding SBF icons

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      refine - A React-based framework for building data-intensive applications
-      in no time.
+      SchoolBookFair - A place where to find and sell used school books
     </title>
   </head>
   <body>
